# next

./: hand_yolov1
Ch02-KNN/: 2.1.py  2.2.2.py  2.2.4.py  2.3.2.py
Ch03-DecisionTree/: 3.2.1-1.py  3.2.1-2.py  3.2.2.py  3.3.py  3.4.py  3.5.1.py  3.5.2.py  3.6.2-1.py  3.6.2-2.py  3.6.2-3.py
Ch04-NaiveBayes/: 4.7.1.py  4.7.2.py  4.7.3.py  4.8.1.py  4.8.2.py  4.9.1.py  4.9.2-1.py  4.9.2-2.py  4.9.2-3.py  4.9.2-4.py  bayes.py
Ch05-Logistic/: 5.4.1.py  5.4.2.py  5.4.3.py  5.4.4.py  5.4.5.py  5.5.2-1.py  5.5.2-2.py  5.6.py
Ch06-SVM/: 6.3.py  6.4.py  6.5.1.py  6.5.2.py  6.6.py  6.7.py
Ch07-AdaBoost/: 7.4.1.py  7.5.py
Ch08-Regression/: 8.2.1.py  8.2.2.py  8.2.3.py  8.3.py  8.4.py
Ch09-Regression Trees/: 9.3.py  9.4.1.py  9.4.2.py  9.4.3.py  9.4.4.py  9.4.5.py  9.5.1-1.py  9.5.1-2.py  9.5.2.py  9.6.1.py  9.6.2.py  9.7.1.py  9.7.2.py  9.8.py
ML_my_implementation/DecisionTree/: 1.py
ML_my_implementation/KNN/: 1.py  2.py  3.py
ML_my_implementation/Logistic/: 1.py
ML_my_implementation/NaiveBayes/: 1.py  2.py
ML_my_implementation/SVM/: 1.py  2.py
PID/: PID.py  READ.md  pid_test.py
RNN/: deepseek_LSTM.py  deepseek_RNN.py
YT_LiDar_V1.0/: CMakeLists.txt  READ.md  temp.txt
YT_LiDar_V1.0/examples/: YT_V1.0.cpp  example.cpp
YT_LiDar_V1.0/include/: unitree_lidar_sdk.h
YT_LiDar_V1.0/python_files/: YT_V1.0.py
flask/: test_1.py
next_faceAI/: V1.0.py
next_faceAI/cv2_face_models/: res10_300x300_ssd_iter_140000_fp16.caffemodel
quantify/rookie/: P1.py  P2.py  P3.py  P4.py  maotai_kline_hfq.html
web/: app.py  route.py
web/static/: styles.css
(+6 files in other folders)
